Download each case as a separate request to avoid timeout

--- a/templates/search.html
+++ b/templates/search.html
@@ -2,25 +2,86 @@
 
 {% block content %}
     <h3>Results</h3>
-    <form id="crs" action="/crs" method="post">
+    <form id="crs">
         {% for key in keys %}
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="caseIds" value="{{ cases[key] }}">
+                <input class="form-check-input" type="checkbox" name="caseId" value="{{ key }}">
                 <label class="form-check-label">
-                    {{ key }}
+                    {{ key }} <span class="text-muted">({{ cases[key] | length }} case{{ cases[key] | length | pluralize("","s") }})</span>
                 </label>
             </div>
         {% endfor %}
         <button id="crs-submit-button" type="submit" class="btn btn-primary">Create CRS</button>
     </form>
-    <a href="/" class="btn">New Search</button>
+    <a href="/" class="btn">New Search</a>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <div id="status"></div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
+        var cases = {{ cases|tojson }};
+        var casesToDownload = [];
+        var casesCollected = 0;
+        var caseErrors = 0;
+
+        var downloadedCases = [];
+
+        function downloadCases() {
+            if (casesToDownload.length) {
+                var caseId = casesToDownload.pop();
+                console.log(caseId);
+                $.post('/case', {
+                    'caseId': caseId
+                })
+                .done(function(caseDetails) {
+                    downloadedCases.push(caseDetails);
+                    casesCollected += 1;
+                })
+                .fail(function() {
+                    console.log("Error");
+                    caseErrors += 1;
+                })
+                .always(function() {
+                    $("#status").html(casesCollected + " cases collected - " + caseErrors + " errors");
+                    downloadCases();
+                });
+            } else {
+                console.log("Done Downloading");
+                generateCRS();
+            }
+        }
+
+        function generateCRS() {
+            console.log("Generating CRS");
+            $.ajax({
+                type: "POST",
+                url: "/crs",
+                data: JSON.stringify({ 'cases': downloadedCases }),
+                contentType: "application/json; charset=utf-8",
+                dataType: "json"
+            })
+            .done(function() {
+                window.location = "/crs";
+            })
+            .fail(function() {
+                console.log("Error");
+            });
+        }
+
         $(document).ready(function () {
-            $("#crs").submit(function () {
+            $("#crs").submit(function (e) {
+                e.preventDefault();
                 $("#crs-submit-button").attr("disabled", true);
-                return true;
+                $("input[name='caseId']:checked").each(function () {
+                    console.log($(this).val());
+                    var caseIds = cases[$(this).val()];
+                    $.each(caseIds, function(){
+                        casesToDownload.push(this);
+                    });
+                });
+                downloadCases();
+                return false;
             });
         });
     </script>
