--- a/templates/start.html
+++ b/templates/start.html
@@ -8,6 +8,10 @@
             <input class="form-control" type="text" name="firstname">
         </div>
         <div class="form-group">
+            <label>Middle Name</label>
+            <input class="form-control" type="text" name="middlename">
+        </div>
+        <div class="form-group">
             <label>Last Name</label>
             <input class="form-control" type="text" name="lastname">
         </div>
