--- a/templates/start.html
+++ b/templates/start.html
@@ -16,6 +16,10 @@
             <input class="form-control" type="text" name="lastname">
         </div>
         <div class="form-group">
+            <label>Username</label>
+            <input class="form-control" type="username" name="username">
+        </div>
+        <div class="form-group">
             <label>Password</label>
             <input class="form-control" type="password" name="password">
         </div>
