--- a/templates/start.html
+++ b/templates/start.html
@@ -3,25 +3,29 @@
 {% block content %}
     <h3>Search</h3>
     <form action="/search" method="post">
-        <div class="form-group">
-            <label>First Name</label>
-            <input class="form-control" type="text" name="firstname">
+        <div class="form-row">
+            <div class="form-group col">
+                <label>First</label>
+                <input class="form-control" type="text" name="firstname">
+            </div>
+            <div class="form-group col-2">
+                <label>Middle</label>
+                <input class="form-control" type="text" name="middlename">
+            </div>
+            <div class="form-group col">
+                <label>Last</label>
+                <input class="form-control" type="text" name="lastname">
+            </div>
         </div>
-        <div class="form-group">
-            <label>Middle Name</label>
-            <input class="form-control" type="text" name="middlename">
-        </div>
-        <div class="form-group">
-            <label>Last Name</label>
-            <input class="form-control" type="text" name="lastname">
-        </div>
-        <div class="form-group">
-            <label>Username</label>
-            <input class="form-control" type="username" name="username">
-        </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input class="form-control" type="password" name="password">
+        <div class="form-row">
+            <div class="form-group col">
+                <label>Username</label>
+                <input class="form-control" type="username" name="username">
+            </div>
+            <div class="form-group col">
+                <label>Password</label>
+                <input class="form-control" type="password" name="password">
+            </div>
         </div>
         <button type="submit" class="btn btn-primary">Search</button>
     </form>
