--- a/templates/search.html
+++ b/templates/search.html
@@ -22,7 +22,7 @@
         {% endfor %}
         <button id="crs-submit-button" type="submit" class="btn btn-primary">Create CRS</button>
     </form>
-    <a href="/" class="btn">New Search</a>
+    <a href="/logout" class="btn">New Search</a>
 
     <div id="status"></div>
 
